[metadata]
name = smoothprogressbar
version = 0.2.0
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest progress bar over the world
long_description = file: README.md
platforms = linux
python_requires = >=3.3
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Programming Language :: Python :: 3.2
url = https://github.com/francois-le-ko4la/smooth-progressbar
download_url = https://github.com/francois-le-ko4la/smooth-progressbar.git
license = GPL
license_file = LICENSE

[options]
zip_safe = True
include_package_data = True
packages = find:
test_suite = tests.*
install_requires =
        setuptools>=39.0.1
        pycodestyle>=2.3.1
        pythread>=1.0.0
dependency_links =
        https://github.com/francois-le-ko4la/python-multithreading/archive/1.0.0.tar.gz#egg=pythread-1.0.0
setup_requires = pytest-runner

[bdist_wheel]
universal = 1

[build-system]
requires = ["setuptools"]

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
