[metadata]
name = smoothprogressbar
version = 0.2.0
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest progress bar over the world
long_description = file: README.md
platforms = linux
python_requires = >=3.3
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Programming Language :: Python :: 3.2
url = https://github.com/francois-le-ko4la/smooth-progressbar
download_url = https://github.com/francois-le-ko4la/smooth-progressbar.git
license = GPL
license_file = LICENSE

[options]
python_requires = >=3.6
packages = find:
install_requires =
        wheel>=0.31.0
        setuptools>=39.0.1
        pycodestyle>=2.3.1
        pythread>=1.0.0
setup_requires = pytest-runner
test_suite = tests.*
tests_require = pytest
include_package_data = True
zip_safe = True

[build-system]
requires = ["setuptools"]

[aliases]
test=pytest
release = sdist bdist_wheel

[tool:pytest]
addopts = --verbose
